--- a/assets/css/youplay.css
+++ b/assets/css/youplay.css
@@ -21,7 +21,7 @@
 
   Main:         #d92b4c (buttons/links hover)
   Back:         #080325 (Content Background)
-  Back Images:  #160962 (back on images)
+  Back Images:  #59148c (back on images)
   Text:         #fff
   Muted Text:   rgba(255, 255, 255, 0.5)
 
