--- a/assets/css/youplay.css
+++ b/assets/css/youplay.css
@@ -7504,7 +7504,7 @@ footer .copyright {
     margin: -5px;
     border: 5px solid rgba(255, 255, 255, 0.1);
     border-color: transparent;
-    border-top-color: #d92b4c;
+    border-top-color: #19c3e2;
     border-radius: inherit;
     opacity: .85;
     -webkit-animation: youplay-preloader-spin 1s infinite;
