--- a/assets/css/youplay.css
+++ b/assets/css/youplay.css
@@ -188,7 +188,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #d92b4c;
+    color: #2b6ad9;
 }
 
 /*
@@ -326,7 +326,7 @@ img {
  * Text Color Helper
  */
 .text-default {
-    color: #d92b4c !important;
+    color: #2b6ad9 !important;
 }
 
 .text-primary {
@@ -346,7 +346,7 @@ img {
 }
 
 .text-danger {
-    color: #d92b4c !important;
+    color: #2b6ad9 !important;
 }
 
 .text-mute {
@@ -357,7 +357,7 @@ img {
  * Bg Color Helper
  */
 .bg-default {
-    background-color: #d92b4c !important;
+    background-color: #2b6ad9 !important;
 }
 
 .bg-primary {
@@ -377,7 +377,7 @@ img {
 }
 
 .bg-danger {
-    background-color: #d92b4c !important;
+    background-color: #2b6ad9 !important;
 }
 
 /*
@@ -2587,8 +2587,8 @@ img.rounded {
 .btn:active::before,
 .btn.active::before,
 .open > .dropdown-toggle.btn::before {
-    background: #d92b4c;
-    border: 2px solid #d92b4c;
+    background: #2b6ad9;
+    border: 2px solid #2b6ad9;
 }
 
 .btn-primary:hover::before,
@@ -2637,8 +2637,8 @@ img.rounded {
 .btn-danger:active::before,
 .btn-danger.active::before,
 .open > .dropdown-toggle.btn-danger::before {
-    background: #d92b4c;
-    border: 2px solid #d92b4c;
+    background: #2b6ad9;
+    border: 2px solid #2b6ad9;
 }
 
 .btn-white:hover,
@@ -2980,8 +2980,8 @@ fieldset[disabled] .btn {
 .pagination > li.active > span::before,
 .pagination > li.active > span:hover::before,
 .pagination > li > span:hover::before {
-    background: #d92b4c;
-    border: 2px solid #d92b4c;
+    background: #2b6ad9;
+    border: 2px solid #2b6ad9;
 }
 
 /*---------------------------
@@ -2999,7 +2999,7 @@ fieldset[disabled] .btn {
 }
 
 .progress .progress-bar {
-    background-color: #d92b4c;
+    background-color: #2b6ad9;
 }
 
 .progress .progress-bar-primary {
@@ -3019,7 +3019,7 @@ fieldset[disabled] .btn {
 }
 
 .progress .progress-bar-danger {
-    background-color: #d92b4c;
+    background-color: #2b6ad9;
 }
 
 /*---------------------------
@@ -3079,7 +3079,7 @@ fieldset[disabled] .btn {
     font-size: 2rem;
     line-height: 50px;
     text-align: center;
-    background: #d92b4c;
+    background: #2b6ad9;
     -webkit-transform: skew(-7deg);
         -ms-transform: skew(-7deg);
             transform: skew(-7deg);
@@ -3361,8 +3361,8 @@ fieldset[disabled] .btn {
 .pager li > a:hover::before, .pager li > a.active::before,
 .pager li > span:hover::before,
 .pager li > span.active::before {
-    background: #d92b4c;
-    border: 2px solid #d92b4c;
+    background: #2b6ad9;
+    border: 2px solid #2b6ad9;
 }
 
 /*---------------------------
@@ -3405,7 +3405,7 @@ fieldset[disabled] .btn {
 }
 
 .label-danger::before {
-    background: #d92b4c;
+    background: #2b6ad9;
 }
 
 /*---------------------------
@@ -3452,7 +3452,7 @@ fieldset[disabled] .btn {
 }
 
 .alert-danger::before {
-    background: #d92b4c;
+    background: #2b6ad9;
 }
 
 /*---------------------------
@@ -3982,7 +3982,7 @@ textarea {
 }
 
 .youplay-rating input:checked ~ label {
-    color: #d92b4c;
+    color: #2b6ad9;
 }
 
 .youplay-rating label {
@@ -4002,7 +4002,7 @@ textarea {
 
 .youplay-rating label:hover,
 .youplay-rating label:hover ~ label {
-    color: #d92b4c;
+    color: #2b6ad9;
     opacity: .8;
 }
 
@@ -6946,7 +6946,7 @@ h2 + .youplay-news {
 }
 
 .pricing-table li > strong {
-    color: #d92b4c;
+    color: #2b6ad9;
 }
 
 .pricing-table li.plan-action {
@@ -7243,8 +7243,8 @@ button.mfp-close::before {
 }
 
 .sweet-alert .btn:hover::before, .sweet-alert .btn:focus::before, .sweet-alert .btn.focus::before, .sweet-alert .btn:active::before, .sweet-alert .btn.active::before {
-    background: #d92b4c;
-    border-color: #d92b4c;
+    background: #2b6ad9;
+    border-color: #2b6ad9;
 }
 
 .sweet-overlay {
