--- a/assets/css/youplay.css
+++ b/assets/css/youplay.css
@@ -110,7 +110,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     word-wrap: break-word;
-    background: #080325;
+    background: #000000;
     background: rgba(8, 3, 37, 0.9);
 }
 
@@ -284,7 +284,7 @@ img {
     padding: .1px;
     margin: 0 auto;
     overflow: hidden;
-    background: #080325;
+    background: #000000;
 }
 
 .content-wrap .youplay-content {
@@ -2426,7 +2426,7 @@ img.rounded {
 }
 
 /*
- * Opacity
+ * 
  */
 .op-0 {
     opacity: 0 !important;
